[package]
edition = "2021"
name = "yew-issue"
version = "0.1.0"

[dependencies]
log = "0.4.14"
yew-macro = {git = "https://github.com/yewstack/yew"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = {version = "0.7", features = ["futures"]}
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = {git = "https://github.com/yewstack/yew", features = ["hydration", "csr", "tokio", "wasm_test"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.13"
once_cell = "1.5"
tokio = {version = "1.15.0", features = ["full"]}
tokio-util = {version = "0.7", features = ["rt"]}
warp = "0.3"
yew = {git = "https://github.com/yewstack/yew", features = ["hydration", "ssr", "tokio"]}
