[package]
edition = "2021"
name = "yew-issue"
version = "0.1.0"

[dependencies]
log = "0.4.14"
yew-macro = {git = "https://github.com/yewstack/yew"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2.80"
yew = {git = "https://github.com/yewstack/yew", features = ["hydration", "csr", "tokio", "wasm_test"]}
gloo = {version = "0.7.0", features = ["futures"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yew = {git = "https://github.com/yewstack/yew", features = ["hydration", "ssr", "tokio"]}
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3"
num_cpus = "1.13"
tokio-util = { version = "0.7", features = ["rt"] }
once_cell = "1.5"
